--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
+    "mongoose": "^8.8.1",
     "pug": "^3.0.3"
   }
 }
